dismiss keyboard on tap outside searchbar

--- a/NextEpisode/Base.lproj/Main.storyboard
+++ b/NextEpisode/Base.lproj/Main.storyboard
@@ -46,7 +46,7 @@
         <scene sceneID="9pS-xG-YVt">
             <objects>
                 <tableViewController id="ci0-W9-i7h" customClass="NEShowTVC" customModule="NextEpisode" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="sIu-iO-gXP">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" keyboardDismissMode="onDrag" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="sIu-iO-gXP">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
